--- a/letter.css
+++ b/letter.css
@@ -37,6 +37,8 @@ p {
     /* padding-left:10px; */
 }
 
+img {padding:15 0 15 0;}
+
 a:link {
 color: #ff6600;
 font-weight: bold;
@@ -46,6 +48,12 @@ font-weight: bold;
 a:visited {
 color: #ff6600;
 font-weight: bold;
+}
+
+.scroller {
+    height: 350px;
+    overflow: scroll;
+    border:1px solid #888;
 }
 
 .code {
